# netbox-pathways

./: .gitignore  CHANGELOG.md  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.devcontainer/: .gitignore  Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  requirements-dev.txt
.devcontainer/configuration/: configuration.py  logging.py  plugins.py
.devcontainer/env/: local.env.example
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: configuration.md  development.md  geojson-api.md  index.md  installation.md  map.md  models.md  pull-sheets.md  qgis.md  rest-api.md  zensical.toml
docs/developer/: api-examples.md  architecture.md  contributing.md  map-layer-registry.md
docs/getting-started/: configuration.md  installation.md  postgis-setup.md  quickstart.md  srid.md
docs/plans/: 2026-03-10-svg-marker-shapes-design.md  2026-03-10-svg-marker-shapes.md  2026-03-10-typescript-build-pipeline-design.md  2026-03-10-typescript-build-pipeline.md
docs/reference/: choices.md  geojson-api.md
docs/superpowers/plans/: 2026-03-19-map-layer-registry.md  2026-04-03-cable-routing-redesign.md
docs/superpowers/specs/: 2026-03-19-map-layer-registry-design.md  2026-03-23-html-detail-cards-design.md  2026-04-03-cable-routing-redesign.md
docs/user-guide/: cable-routing.md  circuit-geometry.md  concepts.md  conduit-banks.md  interactive-map.md  junctions.md  map-widget.md  pathways.md  pull-sheets.md  qgis-integration.md  route-planner.md  site-geometry.md  structures.md
netbox_fiber/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  svg.py  tables.py  urls.py  views.py
netbox_fiber/migrations/: __init__.py
netbox_fiber/static/netbox_fiber/css/: fiber-map.css
netbox_fiber/static/netbox_fiber/js/: fiber-map.js
netbox_fiber/templates/netbox_fiber/: base.html  device_splices.html  map.html  splice_diagram.html
netbox_pathways/: __init__.py  admin.py  checks.py  choices.py  coord_parser.py  filterforms.py  filters.py  forms.py  geo.py  graph.py  models.py  navigation.py  registry.py  route_engine.py  routing.py  search.py  signals.py  tables.py  template_content.py  urls.py  views.py
netbox_pathways/api/: external_geo.py  geo.py  serializers.py  traversal.py  urls.py  views.py
netbox_pathways/graphql/: filters.py  schema.py  types.py
netbox_pathways/management/commands/: _geodata_worker.py  generate_qgis_project.py  generate_sample_data.py  import_geodata.py
netbox_pathways/migrations/: 0001_initial.py  0002_pathway_end_location_pathway_start_location_and_more.py  0002_replace_owner_with_tenant.py  0003_alter_conduitbank_structure_and_more.py  0003_structure_optional_site_dimensions.py  0004_circuit_geometry.py  0004_remove_pathway_cable_count_and_more.py  0005_replace_unique_together_with_constraints.py  0006_remove_cablesegment_sequence_enter_exit.py  0007_cable_routing_redesign.py  0008_conduitbank_pathway_subclass.py  0009_remove_conduit_unique_position_per_bank_and_more.py  0010_structure_status.py  0011_rename_name_to_label.py  0012_add_filter_field_indexes.py  0013_plannedroute.py  0014_plannedroute_parent_split.py  0015_installer_and_commissioned_date.py  0016_cablesegment_lashed_with.py  0017_aerialspan_attachment_height_per_side.py  0017_conduitbank_height_width.py  0018_aerialspan_attachment_height_per_side.py  0019_alter_pathway_path.py  0020_pathway_status.py  __init__.py
netbox_pathways/static/netbox_pathways/: bundle.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
netbox_pathways/static/netbox_pathways/css/: leaflet-theme.css  pathways-map.css
netbox_pathways/static/netbox_pathways/js/: detail-map.js  pathways-map.js  point-polygon-widget.js
netbox_pathways/static/netbox_pathways/qgis/: pathways.qml  structures.qml
netbox_pathways/static/netbox_pathways/src/: coord-parser.test.ts  coord-parser.ts  data-layers.test.ts  data-layers.ts  detail-map.ts  draw-controls.ts  endpoint-markers.ts  external-layers.test.ts  external-layers.ts  fetch-info.test.ts  fix-edit-controls.ts  geom-ops.test.ts  geom-ops.ts  load-strategy.test.ts  load-strategy.ts  map-core.ts  map-utils.ts  (+13 more)
netbox_pathways/templates/netbox_pathways/: base.html  cable_route_tab.html  cable_trace.html  cablesegment.html  map.html  neighbors.html  object_edit_map.html  plannedroute.html  plannedroute_apply.html  plannedroute_split.html  pullsheet_detail.html  pullsheet_list.html  route_finder.html  route_planner.html  structure.html
netbox_pathways/ui/: panels.py
schemas/: gomap_structures.yaml
tests/: conftest.py  test_adjacency.py  test_aerial_span.py  test_bulk_import.py  test_cable_routing_views.py  test_cable_segment.py  test_circuit_geometry.py  test_conduitbank.py  test_coord_parser.py  test_endpoint_validation.py  test_external_geo.py  test_field_additions.py  test_filters.py  test_geo_api.py  test_geo_length.py  test_graph.py  test_graphql.py  test_import_geodata.py  test_indoor_pathways.py  test_lashed_with.py  test_map_view.py  test_map_widget.py  test_pathway_endpoint_form_mixin.py  test_pathway_status.py  test_planned_route.py  test_registry.py  test_route_engine.py  test_route_planner_views.py  test_routing.py  test_signals.py  test_slack_loop.py  test_srid_checks.py
(+19 files in other folders)
