[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_pathways", "netbox_pathways.*"]

[tool.setuptools.package-data]
netbox_pathways = [
    "templates/**/*",
    "static/**/dist/*",
    "static/**/vendor/*",
    "static/**/css/*",
    "static/**/qgis/*",
]

[project]
name = "netbox-pathways"
version = "0.1.0"
description = "NetBox plugin for physical cable plant infrastructure documentation with GIS capabilities"
readme = "README.md"
authors = [
    { name = "Jonathan Senecal", email = "contact@jonathansenecal.com" },
]
license-files = ["LICENSE"]
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "djangorestframework-gis>=1.2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "pre-commit>=4.0.0",
    "pytest",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "ruff",
]
docs = [
    "zensical",
]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-pathways"
Source = "https://github.com/jsenecal/netbox-pathways"
Tracker = "https://github.com/jsenecal/netbox-pathways/issues"
Documentation = "https://jsenecal.github.io/netbox-pathways/"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false
message = "chore: bump version {current_version} -> {new_version}"
tag_message = "Release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "netbox_pathways/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ", "PIE"]
ignore = ["E501", "N806", "S101", "DJ01"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["N806", "N999"]
"tests/*" = ["S101", "S105", "S106", "E402", "F841"]
"netbox_pathways/management/commands/generate_sample_data.py" = ["S311", "B007"]
"netbox_pathways/management/commands/import_geodata.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netbox_pathways --cov-report=term-missing --reuse-db"
